--- a/ThinkWhat/Controllers/App/Feed/SurveyTableViewController/Cells/SurveyTableViewCell.xib
+++ b/ThinkWhat/Controllers/App/Feed/SurveyTableViewController/Cells/SurveyTableViewCell.xib
@@ -10,12 +10,15 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="OpenSans-Bold.ttf">
+            <string>OpenSans-Bold</string>
+        </array>
         <array key="OpenSans-Regular.ttf">
             <string>OpenSans</string>
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SurveyTableViewCell" customModule="ThinkWhat" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="topSurveyCell" rowHeight="80" id="KGk-i7-Jjw" customClass="SurveyTableViewCell" customModule="ThinkWhat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
@@ -25,59 +28,103 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Fvt-AY-Abc">
-                        <rect key="frame" x="16" y="11" width="288" height="58"/>
+                        <rect key="frame" x="16" y="11" width="216.33333333333334" height="58"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fif-xL-b8z">
-                                <rect key="frame" x="0.0" y="0.0" width="288" height="17.333333333333332"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PAr-lg-cMj">
+                                <rect key="frame" x="0.0" y="0.0" width="216.33333333333334" height="23.333333333333332"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iq4-kt-cp7">
-                                        <rect key="frame" x="0.0" y="0.0" width="247.33333333333334" height="17.333333333333332"/>
-                                    </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pes-4x-Qy0">
-                                        <rect key="frame" x="247.33333333333329" y="0.0" width="40.666666666666657" height="17.333333333333332"/>
-                                        <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="11"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QiW-pt-Pi4">
-                                <rect key="frame" x="0.0" y="17.333333333333332" width="288" height="40.666666666666671"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kOG-0O-rHh">
-                                        <rect key="frame" x="0.0" y="0.0" width="247.33333333333334" height="40.666666666666664"/>
-                                        <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fie-4K-3E1" customClass="ProgressCirle" customModule="ThinkWhat" customModuleProvider="target">
-                                        <rect key="frame" x="247.33333333333329" y="0.0" width="40.666666666666657" height="40.666666666666664"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hUt-V7-gqQ" customClass="SurveyCategoryIcon" customModule="ThinkWhat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="23.333333333333332" height="23.333333333333332"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="fie-4K-3E1" secondAttribute="height" multiplier="1:1" id="aAG-K9-ykf"/>
+                                            <constraint firstAttribute="width" secondItem="hUt-V7-gqQ" secondAttribute="height" multiplier="1:1" id="SzO-iQ-gW3"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uOh-bY-I0X">
+                                        <rect key="frame" x="31.333333333333343" y="0.0" width="185" height="23.333333333333332"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3dI-5J-1Sh">
+                                                <rect key="frame" x="0.0" y="4.6666666666666661" width="30" height="13.999999999999998"/>
+                                                <color key="backgroundColor" red="1" green="0.14901960780000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="11"/>
+                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="3dI-5J-1Sh" firstAttribute="height" secondItem="uOh-bY-I0X" secondAttribute="height" multiplier="0.6" id="0tx-y4-AVd"/>
+                                            <constraint firstItem="3dI-5J-1Sh" firstAttribute="centerY" secondItem="uOh-bY-I0X" secondAttribute="centerY" id="KzF-mc-0Un"/>
+                                            <constraint firstItem="3dI-5J-1Sh" firstAttribute="leading" secondItem="uOh-bY-I0X" secondAttribute="leading" id="bSb-99-cAs"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NQU-7I-xoj">
+                                        <rect key="frame" x="23.333333333333336" y="11" width="8" height="1.3333333333333339"/>
+                                        <color key="backgroundColor" red="1" green="0.14901960780000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
                                 </subviews>
-                            </stackView>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="uOh-bY-I0X" firstAttribute="leading" secondItem="hUt-V7-gqQ" secondAttribute="trailing" constant="8" id="1Cq-gy-Yvf"/>
+                                    <constraint firstItem="hUt-V7-gqQ" firstAttribute="top" secondItem="PAr-lg-cMj" secondAttribute="top" id="4eQ-YO-8Yz"/>
+                                    <constraint firstAttribute="bottom" secondItem="uOh-bY-I0X" secondAttribute="bottom" id="7k8-Ik-mSF"/>
+                                    <constraint firstItem="NQU-7I-xoj" firstAttribute="centerY" secondItem="hUt-V7-gqQ" secondAttribute="centerY" id="9RZ-d7-K60"/>
+                                    <constraint firstItem="hUt-V7-gqQ" firstAttribute="leading" secondItem="PAr-lg-cMj" secondAttribute="leading" id="B6P-FK-isY"/>
+                                    <constraint firstItem="NQU-7I-xoj" firstAttribute="leading" secondItem="hUt-V7-gqQ" secondAttribute="trailing" id="HKm-mL-Qc2"/>
+                                    <constraint firstAttribute="trailing" secondItem="uOh-bY-I0X" secondAttribute="trailing" id="Ijk-Mu-jzk"/>
+                                    <constraint firstItem="uOh-bY-I0X" firstAttribute="leading" secondItem="NQU-7I-xoj" secondAttribute="trailing" id="e6x-ph-bnl"/>
+                                    <constraint firstAttribute="bottom" secondItem="hUt-V7-gqQ" secondAttribute="bottom" id="hDw-7l-jsu"/>
+                                    <constraint firstItem="NQU-7I-xoj" firstAttribute="height" secondItem="3dI-5J-1Sh" secondAttribute="height" multiplier="0.1" id="kBm-Fu-kq8"/>
+                                    <constraint firstItem="uOh-bY-I0X" firstAttribute="top" secondItem="PAr-lg-cMj" secondAttribute="top" id="puv-Cx-bdW"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kOG-0O-rHh">
+                                <rect key="frame" x="0.0" y="23.333333333333339" width="216.33333333333334" height="34.666666666666657"/>
+                                <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="19"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="QiW-pt-Pi4" firstAttribute="height" secondItem="Fvt-AY-Abc" secondAttribute="height" multiplier="0.7" id="IYH-2n-r0l"/>
-                            <constraint firstItem="fif-xL-b8z" firstAttribute="height" secondItem="Fvt-AY-Abc" secondAttribute="height" multiplier="0.3" id="IpU-qr-SLZ"/>
-                            <constraint firstItem="pes-4x-Qy0" firstAttribute="width" secondItem="fie-4K-3E1" secondAttribute="width" id="eip-gs-Yko"/>
+                            <constraint firstItem="kOG-0O-rHh" firstAttribute="height" secondItem="Fvt-AY-Abc" secondAttribute="height" multiplier="0.6" id="tLa-p1-bd2"/>
                         </constraints>
                     </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pes-4x-Qy0">
+                        <rect key="frame" x="232.33333333333334" y="0.0" width="79.666666666666657" height="79.666666666666671"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="pes-4x-Qy0" secondAttribute="height" multiplier="1:1" id="4Vi-sx-S0Y"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="11"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="Fvt-AY-Abc" secondAttribute="bottom" id="NXi-24-s4P"/>
-                    <constraint firstItem="Fvt-AY-Abc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="cIi-T0-AVI"/>
-                    <constraint firstItem="Fvt-AY-Abc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="vgy-NH-n54"/>
-                    <constraint firstItem="Fvt-AY-Abc" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="xeA-bQ-nxq"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Fvt-AY-Abc" secondAttribute="bottom" id="CUH-2H-2Pv"/>
+                    <constraint firstAttribute="bottom" secondItem="pes-4x-Qy0" secondAttribute="bottom" id="Hqx-c6-xTG"/>
+                    <constraint firstItem="Fvt-AY-Abc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Swr-MX-bMU"/>
+                    <constraint firstAttribute="trailing" secondItem="pes-4x-Qy0" secondAttribute="trailing" constant="8" id="ZOF-AC-fPb"/>
+                    <constraint firstItem="Fvt-AY-Abc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="btM-DF-ILc"/>
+                    <constraint firstItem="pes-4x-Qy0" firstAttribute="leading" secondItem="Fvt-AY-Abc" secondAttribute="trailing" id="x26-6H-vsl"/>
+                    <constraint firstItem="pes-4x-Qy0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="y1d-Bp-U9e"/>
                 </constraints>
+                <userDefinedRuntimeAttributes>
+                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                        <real key="value" value="10"/>
+                    </userDefinedRuntimeAttribute>
+                    <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="NO"/>
+                </userDefinedRuntimeAttributes>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="0.90980392156862744" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="completionPercentage" destination="fie-4K-3E1" id="dmQ-xf-xa7"/>
-                <outlet property="duration" destination="pes-4x-Qy0" id="1ox-gU-HEH"/>
-                <outlet property="tags" destination="Iq4-kt-cp7" id="eIh-Cc-Xes"/>
+                <outlet property="category" destination="3dI-5J-1Sh" id="UF9-OD-et9"/>
+                <outlet property="duration" destination="pes-4x-Qy0" id="GjW-Fq-at5"/>
+                <outlet property="icon" destination="hUt-V7-gqQ" id="3pV-pF-Pn6"/>
+                <outlet property="join" destination="NQU-7I-xoj" id="x1w-jz-rwU"/>
                 <outlet property="title" destination="kOG-0O-rHh" id="dM8-fu-dik"/>
             </connections>
             <point key="canvasLocation" x="108.69565217391305" y="48.097826086956523"/>
