--- a/ThinkWhat/Controllers/App/Feed/SurveyStackViewController/SurveyPreview/SurveyPreview.xib
+++ b/ThinkWhat/Controllers/App/Feed/SurveyStackViewController/SurveyPreview/SurveyPreview.xib
@@ -19,10 +19,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SurveyPreview" customModule="ThinkWhat" customModuleProvider="target">
             <connections>
+                <outlet property="category" destination="7Nf-f6-iFT" id="aBc-rC-gYC"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="dsH-mR-bMg"/>
                 <outlet property="descriptionLabel" destination="wQC-xt-f10" id="VeR-0C-eUs"/>
+                <outlet property="icon" destination="4Cb-oL-mY6" id="WN0-UY-Hf4"/>
                 <outlet property="nextButton" destination="1tb-oM-bMf" id="TxK-Nt-M8d"/>
-                <outlet property="surveyDate" destination="3fB-0Z-9Rz" id="j5f-Wr-5OO"/>
+                <outlet property="parentCategory" destination="1Wf-5g-7pI" id="TxK-zV-HrR"/>
                 <outlet property="titleLabel" destination="0yw-II-DdQ" id="7qi-iR-AME"/>
                 <outlet property="userImage" destination="66y-2n-5Y1" id="ACW-7y-rew"/>
                 <outlet property="userName" destination="yrD-CE-fKu" id="htB-Nt-YnN"/>
@@ -65,35 +67,48 @@
                         <constraint firstItem="1tb-oM-bMf" firstAttribute="width" secondItem="1tb-oM-bMf" secondAttribute="height" multiplier="40:5" id="yb7-z5-W9P"/>
                     </constraints>
                 </stackView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18.04.2020 16:15" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fB-0Z-9Rz">
-                    <rect key="frame" x="263.5" y="58.5" width="95.5" height="16.5"/>
-                    <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="12"/>
-                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="66y-2n-5Y1">
-                    <rect key="frame" x="16" y="20" width="94" height="94"/>
+                    <rect key="frame" x="16" y="20" width="75" height="75"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="66y-2n-5Y1" secondAttribute="height" multiplier="1:1" id="4U6-ln-at9"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pavel Bukharov" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yrD-CE-fKu">
-                    <rect key="frame" x="118" y="20" width="93.5" height="94"/>
+                    <rect key="frame" x="99" y="20" width="75" height="75"/>
                     <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="12"/>
                     <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Y7q-Ha-r9d">
+                    <rect key="frame" x="247.5" y="39" width="111.5" height="37"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Субкатегория" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Nf-f6-iFT">
+                            <rect key="frame" x="0.0" y="0.0" width="111.5" height="15.5"/>
+                            <color key="backgroundColor" red="1" green="0.14901960780000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Категория" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Wf-5g-7pI">
+                            <rect key="frame" x="0.0" y="21.5" width="83" height="15.5"/>
+                            <color key="backgroundColor" red="1" green="0.14901960780000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1jb-gk-6FP">
-                    <rect key="frame" x="0.0" y="114" width="375" height="454.5"/>
+                    <rect key="frame" x="0.0" y="95" width="375" height="473.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Label Label Label Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yw-II-DdQ">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="227"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="237"/>
                             <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="25"/>
                             <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQC-xt-f10">
-                            <rect key="frame" x="37.5" y="227" width="300" height="227.5"/>
+                            <rect key="frame" x="37.5" y="237" width="300" height="236.5"/>
                             <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="13"/>
                             <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
@@ -111,25 +126,35 @@
                         <constraint firstItem="0yw-II-DdQ" firstAttribute="height" secondItem="1jb-gk-6FP" secondAttribute="height" multiplier="0.5" id="hRW-IA-mVI"/>
                     </constraints>
                 </view>
+                <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Cb-oL-mY6" customClass="SurveyCategoryIcon" customModule="ThinkWhat" customModuleProvider="target">
+                    <rect key="frame" x="202.5" y="39" width="37" height="37"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="4Cb-oL-mY6" secondAttribute="height" multiplier="1:1" id="L3R-yG-IMN"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="4Cb-oL-mY6" firstAttribute="width" secondItem="66y-2n-5Y1" secondAttribute="height" multiplier="37:75" id="1g1-Rd-dXr"/>
+                <constraint firstAttribute="trailingMargin" secondItem="Y7q-Ha-r9d" secondAttribute="trailing" id="3D6-lI-AiX"/>
                 <constraint firstItem="FYy-Of-xyz" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.6" id="4kx-Mf-bvP"/>
                 <constraint firstItem="1jb-gk-6FP" firstAttribute="top" secondItem="66y-2n-5Y1" secondAttribute="bottom" id="6SU-ik-JPW"/>
                 <constraint firstItem="66y-2n-5Y1" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="CSc-g7-ZTc"/>
                 <constraint firstItem="yrD-CE-fKu" firstAttribute="width" secondItem="66y-2n-5Y1" secondAttribute="width" id="HM6-VT-Wc7"/>
+                <constraint firstItem="Y7q-Ha-r9d" firstAttribute="height" secondItem="4Cb-oL-mY6" secondAttribute="height" id="JJn-GJ-tnr"/>
                 <constraint firstItem="66y-2n-5Y1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="Qcc-dl-2h7"/>
                 <constraint firstItem="FYy-Of-xyz" firstAttribute="top" secondItem="1jb-gk-6FP" secondAttribute="bottom" id="RQa-hd-211"/>
+                <constraint firstItem="4Cb-oL-mY6" firstAttribute="centerY" secondItem="66y-2n-5Y1" secondAttribute="centerY" id="Tjk-6b-ItN"/>
                 <constraint firstAttribute="trailing" secondItem="1jb-gk-6FP" secondAttribute="trailing" id="UHe-uI-52q"/>
                 <constraint firstItem="yrD-CE-fKu" firstAttribute="height" secondItem="66y-2n-5Y1" secondAttribute="height" id="YUw-5S-pfW"/>
+                <constraint firstItem="Y7q-Ha-r9d" firstAttribute="centerY" secondItem="4Cb-oL-mY6" secondAttribute="centerY" id="bVm-I4-f1e"/>
                 <constraint firstItem="FYy-Of-xyz" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dfg-hI-nvE"/>
-                <constraint firstItem="3fB-0Z-9Rz" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="fuk-kU-71H"/>
                 <constraint firstAttribute="bottom" secondItem="FYy-Of-xyz" secondAttribute="bottom" constant="8" id="hTK-pk-WWA"/>
                 <constraint firstItem="yrD-CE-fKu" firstAttribute="centerY" secondItem="66y-2n-5Y1" secondAttribute="centerY" id="j33-Wo-J0e"/>
-                <constraint firstItem="3fB-0Z-9Rz" firstAttribute="centerY" secondItem="66y-2n-5Y1" secondAttribute="centerY" id="jzF-KB-EQZ"/>
+                <constraint firstItem="Y7q-Ha-r9d" firstAttribute="leading" secondItem="4Cb-oL-mY6" secondAttribute="trailing" constant="8" id="mnV-kQ-suH"/>
                 <constraint firstItem="1jb-gk-6FP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="sb1-tG-gL6"/>
                 <constraint firstItem="yrD-CE-fKu" firstAttribute="leading" secondItem="66y-2n-5Y1" secondAttribute="trailing" constant="8" id="wXq-rS-fAG"/>
-                <constraint firstItem="66y-2n-5Y1" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.25" id="wZe-QJ-hZP"/>
+                <constraint firstItem="66y-2n-5Y1" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.2" id="wZe-QJ-hZP"/>
             </constraints>
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
